--- a/app/views/wechat/users/edit_password.html.erb
+++ b/app/views/wechat/users/edit_password.html.erb
@@ -9,20 +9,22 @@
       </div>
     </div>
 
-    <div class="wechat-login">
-      <div id="flash_alert">
+    <div class="wechat-login clearfix">
+      <div class="col-xs-12">
+              <div id="flash_alert">
         <% flash.each do |key, value| %>
           <% if value.present? %>
-              <div class="text-danger"><%= value%></div>
+              <div class="text-<%= key %>"><%= value%></div>
           <% end %>
         <% end %>
+      </div>
       </div>
       
       <%= simple_form_for([:wechat, current_user], url: update_password_wechat_user_path(current_user), method: :put,
                                   html: { class: 'form-horizontal'}, 
                                   wrapper: :horizontal_form) do |f|%>
         <div class="form-group changepass">
-          <%= f.hint '请不要输入特殊字符!' %>
+          <%#= f.hint '请不要输入特殊字符!' %>
           <%= f.password_field :current_password, placeholder: '请输入原始密码', 
                                                   class: "form-control", 
                                                   autofocus: true,
