--- a/app/views/wechat/discusses/learns.html.erb
+++ b/app/views/wechat/discusses/learns.html.erb
@@ -5,7 +5,7 @@
 
 		<div class="weui_cells weui_cells_access">
 			<% @courses.each do |course| %>
-				<%= link_to sorts_wechat_discusses_path, class: "weui_cell" do %>
+				<%= link_to sorts_wechat_discusses_path(parent: "learns"), class: "weui_cell" do %>
 					<div class="weui_cell_bd weui_cell_primary">
 						<p><%= course.name %></p>
 					</div>
