--- a/app/views/wechat/exams/new.html.erb
+++ b/app/views/wechat/exams/new.html.erb
@@ -22,6 +22,7 @@
     <!-- 试题区 -->
     <%= simple_form_for Exam.new, format: :js, remote: true do |f|%>
 
+    <div class="question-content">
       <!-- 计时提交按钮 -->
       <div class="title-exam-content text-center">
         <a href="javascript:void(0)" class="btn btn-info js-start-answer-question">开 始 计 时</a>
@@ -31,20 +32,22 @@
       </div>
 
       <!-- 试题内容区 -->
-      <div id="carousel-example-generic" class="carousel slide question-content container" data-ride="carousel">
-        <div class="carousel-inner question-content" role="listbox">
-          <%= f.hidden_field :sub_course_number, value: params[:sub_course_number]%>
-          <% @questions.each_with_index do |question, index|%>
-            <div id="question-content-show" class="item <%= "active" if index == 0 %>">
-              <p class="title"><%= index+1 %>. <%= question.title%></p>
-              <% question.options.each_with_index do |option,option_index|%>
-                <p class="option">
-                  <%= radio_button_tag("options[#{question.id}]", option.name.to_s.split(" ").join("").first)%>
-                  <label for="options_<%= question.id %>_<%= select_item(option_index) %>"><%= option.name%></label>
-                </p>
-              <% end %>
-            </div>
-          <% end %>
+      
+        <div id="carousel-example-generic" class="carousel slide container" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <%= f.hidden_field :sub_course_number, value: params[:sub_course_number]%>
+            <% @questions.each_with_index do |question, index|%>
+              <div id="question-content-show" class="item <%= "active" if index == 0 %>">
+                <p class="title"><%= index+1 %>、 <%= question.title%></p>
+                <% question.options.each_with_index do |option,option_index|%>
+                  <p class="option">
+                    <%= radio_button_tag("options[#{question.id}]", option.name.to_s.split(" ").join("").first)%>
+                    <label for="options_<%= question.id %>_<%= select_item(option_index) %>"><%= option.name%></label>
+                  </p>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
 
@@ -74,6 +77,8 @@
   $(document).ready(function() {
     $('.carousel').carousel({
      interval: 0
-    })
+    });
+    var height = $(window).height()-180;
+    $("div.question-content").height(height);
   });
 </script>
