--- a/app/assets/stylesheets/wechat/couses.scss
+++ b/app/assets/stylesheets/wechat/couses.scss
@@ -127,10 +127,10 @@
       }
       .course-exam {
         a.exam {
-          border: 3px solid rgb(36, 92, 158);
+          border: 3px solid #315FBE;
           margin: -3px 30px;
           border-radius: 2px;
-          background-color: rgb(36, 92, 158);
+          background-color: #315FBE;
           color: #fff;
           padding: 5px 20px;
         }
