--- a/app/assets/stylesheets/wechat/exams.scss
+++ b/app/assets/stylesheets/wechat/exams.scss
@@ -4,7 +4,7 @@
   .ceshi {
     padding: 0 -15px !important;
     div {
-      background-color: rgb(31, 92, 158);
+      background-color: #315FBE;
       padding: 15px 0 ;
       margin-bottom: 20px;
       color: #fff;
@@ -29,7 +29,7 @@
       padding: 10px;
     }
     .answer-hr {
-      border:1px solid rgb(31, 92, 158);
+      border:1px solid #315FBE;
     }
     .right-answer {
       color: red;
@@ -51,7 +51,7 @@
   }
   .modal-content {
     .modal-header {
-      background-color: rgb(31, 92, 158);
+      background-color: #315FBE;
       .modal-title {
 
       }
@@ -70,7 +70,7 @@
 .wechat__exams__show {
   .modal-content {
     .modal-header {
-      background-color: rgb(31, 92, 158);
+      background-color: #315FBE;
       .modal-title {
         color: #fff;
       }
