--- a/app/assets/stylesheets/wechat/users.scss
+++ b/app/assets/stylesheets/wechat/users.scss
@@ -122,7 +122,7 @@
         font-size: 12px;
         padding: 4px 0;
         .btn-text-check {
-          background-color: rgb(31, 92, 158);
+          background-color: #315FBE;
           padding: 4px 15px;
           color: #fff;
         }
