--- a/app/assets/stylesheets/wechat/couses.scss
+++ b/app/assets/stylesheets/wechat/couses.scss
@@ -1,7 +1,7 @@
 @import "wechat_variables";
 
 // 课程列表
-.wechat__courses__index {
+.wechat__courses__index, .wechat__users__my_courses {
   .main-content {
     .navbar {
       line-height: 30px;
