--- a/app/views/wechat/discusses/innovations.html.erb
+++ b/app/views/wechat/discusses/innovations.html.erb
@@ -1,4 +1,4 @@
-<% content_for :wechat_title, "讨论中心" %>
+<% content_for :wechat_title, "创新论坛" %>
 
 <div class="weui_tab">
 	<div class="weui_tab_bd">
